--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -163,6 +163,15 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        platform:
+          - name: Android
+            workflow: test-android-sdk.yml
+
+          - name: iOS
+            workflow: test-swift-sdk.yml
+
     steps:
       - name: Generate token
         id: generate_token
@@ -172,9 +181,9 @@ jobs:
           private_key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
           installation_id: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
 
-      - name: Trigger Test Android SDK
+      - name: "Trigger Test ${{ matrix.platform.name }} SDK"
         run: |
           curl -X POST -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/flipt-io/flipt-client-sdks/actions/workflows/test-android-sdk.yml/dispatches \
+            https://api.github.com/repos/flipt-io/flipt-client-sdks/actions/workflows/${{ matrix.platform.workflow }}/dispatches \
             -d '{"ref":"${{ github.head_ref }}", "inputs":{"caller_run_id":"${{ github.run_id }}"}}'
