chore: see contents of /tmp dire
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Extract Artifacts
         run: |
+          tree /tmp
           mkdir -p /tmp/flipt-engine-ffi-iOS-arm64
           mkdir -p /tmp/flipt-engine-ffi-iOS-sim
           mkdir -p /tmp/flipt-engine-ffi-Darwin-arm64
