--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -41,7 +41,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          pattern: flipt-engine-ffi-iOS-arm64*.tar.gz
+          name: flipt-engine-ffi-iOS-arm64.tar.gz
+          path: /tmp
+          run-id: ${{ inputs.caller_run_id }}
+
+      - name: Download Artifact (iOS sim)
+        uses: actions/download-artifact@v4
+        with:
+          github-token: ${{ steps.generate_token.outputs.token }}
+          name: flipt-engine-ffi-iOS-sim.tar.gz
           path: /tmp
           run-id: ${{ inputs.caller_run_id }}
 
@@ -55,8 +63,6 @@ jobs:
 
       - name: Extract Artifacts
         run: |
-          brew install tree
-          tree /tmp
           mkdir -p /tmp/flipt-engine-ffi-iOS-arm64
           mkdir -p /tmp/flipt-engine-ffi-iOS-sim
           mkdir -p /tmp/flipt-engine-ffi-Darwin-arm64
