--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -45,11 +45,11 @@ jobs:
           path: /tmp
           run-id: ${{ inputs.caller_run_id }}
 
-      - name: Download Artifact (iOS sim)
+      - name: Download Artifact (iOS arm64 sim)
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-iOS-sim.tar.gz
+          name: flipt-engine-ffi-iOS-arm64-sim.tar.gz
           path: /tmp
           run-id: ${{ inputs.caller_run_id }}
 
