chore: try to install a specific cmake version
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -89,6 +89,11 @@ jobs:
             sleep 1
           done
 
+      - name: Install CMake
+        uses: lukka/get-cmake@latest
+        with:
+          cmakeVersion: "3.19.8"
+
       - name: Run Integration Tests
         uses: reactivecircus/android-emulator-runner@v2
         env:
