--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -41,6 +41,7 @@ android {
 
     externalNativeBuild {
         cmake {
+            version "3.19.8"
             path "src/main/cpp/CMakeLists.txt"
         }
     }
