--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/flipt-io/flipt-client-sdks"
 libc = "0.2.150"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
-reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"] }
+reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"], default-features = false }
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["io", "codec"] }
 futures-util = "0.3.30"
