--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Install cross
         run: |
-          which cross || cargo install cross --git https://github.com/cross-rs/cross
+          which cross || cargo install cross --locked
           echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
 
       - name: Set RUSTFLAGS (Android)
