chore: revert cross install back to GitHub
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Install cross
         run: |
-          which cross || cargo install cross --locked
+          which cross || cargo install cross --git https://github.com/cross-rs/cross
           echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
 
       - name: Set RUSTFLAGS (Android)
