chore: only install qemu for hosts where we need cross-comp
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -59,6 +59,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Set up QEMU
+        if: matrix.platform.use_cross
         uses: docker/setup-qemu-action@v3
 
       - name: Install cross
