chore: refactor to try and get working with debian x86
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3"
 thiserror = "2.0.3"
 reqwest-retry = "0.7.0"
 reqwest-middleware = "0.4.0"
+lazy_static = "1.4"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
