chore: try to fix packaging names to be consistent
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,9 @@ rustflags = ["-C", "target-feature=+crt-static"]
 [target.x86_64-unknown-linux-musl]
 linker = "musl-gcc"
 rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.aarch64-linux-android]
+rustflags = ["-C", "target-feature=-crt-static"]
+
+[target.x86_64-linux-android]
+rustflags = ["-C", "target-feature=-crt-static"]
