--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -37,11 +37,11 @@ jobs:
 
           - name: Android-arm64
             target: aarch64-linux-android
-            use_cross: true
+            arch: arm64-v8a
 
           - name: Android-x86_64
             target: x86_64-linux-android
-            use_cross: true
+            arch: x86_64
 
     runs-on: ubuntu-22.04
     env:
@@ -77,20 +77,28 @@ jobs:
           which cross || cargo install cross --git https://github.com/cross-rs/cross
           echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
 
-      - name: Set RUSTFLAGS (Android)
+      - name: Install cargo-ndk
         if: endsWith(matrix.platform.target, '-android')
-        run: echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
+        run: cargo install --force cargo-ndk
 
       - name: Set RUSTFLAGS (MUSL)
         if: endsWith(matrix.platform.target, '-musl')
         run: echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
 
       - name: Build
+        if: ${{ !endsWith(matrix.platform.target, '-android') }}
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
           use-cross: ${{ matrix.platform.use_cross }}
+
+      - name: Build (Android)
+        if: endsWith(matrix.platform.target, '-android')
+        uses: actions-rs/cargo@v1
+        with:
+          command: ndk
+          args: --platform 30 --target ${{ matrix.platform.arch }} build --release
 
       - name: Strip
         if: matrix.platform.name == 'Linux-x86_64'
