chore: move flipt-engine-wasm to flipt-engine-wasm-js; only test on x86_64
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 resolver = "2"
-members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-evaluation"]
+members = ["./flipt-engine-ffi", "./flipt-engine-wasm-js", "./flipt-evaluation"]
 
 [profile.release]
 strip = true
 rpath = true
 
-[profile.release.package.flipt-engine-wasm]
+[profile.release.package.flipt-engine-wasm-js]
 opt-level = "s"
 
 [profile.release.package.flipt-engine-ffi]
