chore: get go wasm tests to pass
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-engine-wasm-js"
 strip = true
 rpath = true
 
+[profile.release.package.flipt-engine-wasm]
+opt-level = "s"
+
 [profile.release.package.flipt-engine-wasm-js]
 opt-level = "s"
 
