--- a/.github/workflows/package-ffi-engine-macos.yml
+++ b/.github/workflows/package-ffi-engine-macos.yml
@@ -39,11 +39,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.platform.target }}
-          override: true
+        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -56,10 +52,7 @@ jobs:
           key: macos-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
+        run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
 
       - name: Strip
         run: strip -x target/${{ matrix.platform.target }}/release/libfliptengine.dylib
