--- a/.github/workflows/package-ffi-engine-windows.yml
+++ b/.github/workflows/package-ffi-engine-windows.yml
@@ -30,11 +30,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.platform.target }}
-          override: true
+        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
+
 
       - uses: actions/cache@v4
         with:
@@ -47,10 +44,7 @@ jobs:
           key: windows-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
+        run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
 
       - name: Package
         run: |
