feat: Go wasm (#744)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [workspace]
 resolver = "2"
-members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-evaluation"]
+members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-engine-wasm-js", "./flipt-evaluation"]
 
 [profile.release]
 strip = true
 rpath = true
 
 [profile.release.package.flipt-engine-wasm]
+opt-level = "s"
+
+[profile.release.package.flipt-engine-wasm-js]
 opt-level = "s"
 
 [profile.release.package.flipt-engine-ffi]
