--- a/flipt-client-go/.gitignore
+++ b/flipt-client-go/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.a
 *.dylib
+*.wasm
 
 # Test binary, built with `go test -c`
 *.test
@@ -18,3 +19,4 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 Dockerfile
+*.prof
