--- a/release-please-config.json
+++ b/release-please-config.json
@@ -13,6 +13,10 @@
     "flipt-engine-wasm": {
       "component": "flipt-engine-wasm",
       "release-type": "rust"
+    },
+    "flipt-engine-wasm-js": {
+      "component": "flipt-engine-wasm-js",
+      "release-type": "rust"
     }
   }
 }
