--- a/.github/workflows/package-ffi-engine-android.yml
+++ b/.github/workflows/package-ffi-engine-android.yml
@@ -1,4 +1,4 @@
-name: Package FFI Engine (Linux)
+name: Package FFI Engine (Android)
 on:
   pull_request:
     branches: [main]
@@ -19,11 +19,13 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - name: Linux-x86_64
-            target: x86_64-unknown-linux-musl
+          - name: Android-arm64
+            target: aarch64-linux-android
+            arch: arm64-v8a
 
-          - name: Linux-aarch64
-            target: aarch64-unknown-linux-musl
+          - name: Android-x86_64
+            target: x86_64-linux-android
+            arch: x86_64
 
     runs-on: ubuntu-22.04
     env:
@@ -43,18 +45,13 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: linux-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: android-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Install cross
-        run: |
-          which cross || cargo install cross --git https://github.com/cross-rs/cross
-          echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
+      - name: Install cargo-ndk
+        run: cargo install --force cargo-ndk
 
       - name: Build
-        run: cross build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
+        run: cargo ndk build --platform 30 --target ${{ matrix.platform.arch }} --release
 
       - name: Package
         run: |
@@ -82,4 +79,30 @@ jobs:
         if: github.event_name == 'workflow_dispatch' && !endswith(github.event.inputs.tag, 'pre')
         with:
           tag_name: flipt-engine-ffi-${{ github.event.inputs.tag }}
-          files: flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz
+          files: flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz 
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      FLIPT_RELEASE_BOT_APP_ID: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
+      FLIPT_RELEASE_BOT_APP_PEM: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
+      FLIPT_RELEASE_BOT_INSTALLATION_ID: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
+    if: github.repository == 'flipt-io/flipt-client-sdks'
+    steps:
+      - name: Generate token
+        id: generate_token
+        if: env.FLIPT_RELEASE_BOT_APP_ID != '' && env.FLIPT_RELEASE_BOT_APP_PEM != '' && env.FLIPT_RELEASE_BOT_INSTALLATION_ID != ''
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ env.FLIPT_RELEASE_BOT_APP_ID }}
+          private_key: ${{ env.FLIPT_RELEASE_BOT_APP_PEM }}
+          installation_id: ${{ env.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
+
+      - name: Trigger Test Android SDK
+        if: steps.generate_token.outputs.token != ''
+        run: |
+          curl -X POST -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/flipt-io/flipt-client-sdks/actions/workflows/test-android-sdk.yml/dispatches \
+            -d '{"ref":"${{ github.head_ref }}", "inputs":{"caller_run_id":"${{ github.run_id }}"}}' 
